fix(ui): prevent severity CVSS vector strings from overflowing viewport (#4841)
Fixes an overflow that happens on long severity strings (e.g.
[ALPINE-CVE-2026-1642](https://osv.dev/vulnerability/ALPINE-CVE-2026-1642))

--- a/gcp/website/frontend3/src/styles.scss
+++ b/gcp/website/frontend3/src/styles.scss
@@ -894,6 +894,7 @@ dl.vulnerability-details,
     padding: 0;
     font-family: $osv-heading-font-family;
     font-size: 14px;
+    overflow-wrap: anywhere;
   }
 }
 
